<resources>
    <string name="app_name">Event Lottery System</string>
    <string name="create_new_facility">Create New Facility</string>
    <string name="delete_users">Delete Users</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="create_facility">Create Facility</string>
    <string name="enter_description">Enter description</string>
    <string name="description">Description</string>
    <string name="enter_capacity">Enter capacity</string>
    <string name="capacity">Capacity</string>
    <string name="enter_location">Enter location</string>
    <string name="location">Location</string>
    <string name="enter_facility_name">Enter facility name</string>
    <string name="facility_name">Facility Name</string>
    <string name="create_event_header">Create Event</string>
    <string name="event_name_label">Event Name</string>
    <string name="event_capacity_label">Capacity</string>
    <string name="event_start_date_label">Start Date</string>
    <string name="event_end_date_label">End Date</string>
    <string name="event_description_label">Description</string>
    <string name="publish_event_button">Publish</string>
    <string name="back">Back</string>
    <string name="create_new_event">Create New Event</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_phone">Enter Your Phone (Optional)</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile_image_placeholder">Profile Image Placeholder</string>
</resources>
