<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Header -->
    <TextView
        android:id="@+id/createFacilityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_facility"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Facility Name Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/facilityNameSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createFacilityHeader"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/facilityNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facility_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/facilityNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_facility_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facilityNameLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Location Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locationSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facilityNameSection"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/locationInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Capacity Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/capacitySection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationSection"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/capacityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capacity"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/capacityInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_capacity"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/capacityLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Description Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/descriptionSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/capacitySection"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description"
            android:inputType="textMultiLine"
            android:minHeight="75dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Buttons Section for Back and Create Facility -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/descriptionSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/dark_purple"
            android:text="@string/back"
            app:layout_constraintEnd_toStartOf="@id/createFacilityButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/createFacilityButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_facility"
            android:backgroundTint="@color/dark_purple"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
