<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/user_profile_picture"
        android:src="@drawable/profile_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:background="@drawable/profile_image_border" />

    <TextView
        android:id="@+id/initialsTextView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text=""
        android:textSize="40sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/profileImageView"
        app:layout_constraintStart_toStartOf="@id/profileImageView"
        android:gravity="center"
        android:background="@drawable/profile_image_background"
        android:padding="10dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/userInfoContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/profileImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="First Name Last Name"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/userInfoContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="user@example.com"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phoneContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/emailContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/phoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="123456789"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/createFacilityButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_new_facility"
        app:layout_constraintTop_toBottomOf="@id/phoneContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />

    <Button
        android:id="@+id/deleteUserButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_users"
        app:layout_constraintTop_toBottomOf="@id/createFacilityButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
